--- a/CalculatingBonusPointsOutOfGameWithSwitch/CalculatingBonusPointsOutOfGameWithSwitch.csproj
+++ b/CalculatingBonusPointsOutOfGameWithSwitch/CalculatingBonusPointsOutOfGameWithSwitch.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4F946EDC-B904-4494-8351-B051CF4EEDBA}</ProjectGuid>
+    <ProjectGuid>{7A0407C6-2852-4DD5-9A99-E5054A45B833}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ConsoleApplication1</RootNamespace>
-    <AssemblyName>ConsoleApplication1</AssemblyName>
+    <RootNamespace>CalculatingBonusPointsOutOfGameWithSwitch</RootNamespace>
+    <AssemblyName>CalculatingBonusPointsOutOfGameWithSwitch</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
