--- a/CreatingTriangleOutofInputSides/CreatingTriangleOutofInputSides.csproj
+++ b/CreatingTriangleOutofInputSides/CreatingTriangleOutofInputSides.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4F946EDC-B904-4494-8351-B051CF4EEDBA}</ProjectGuid>
+    <ProjectGuid>{57E9AD42-47B0-415C-9786-6AB102C6ECDC}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ConsoleApplication1</RootNamespace>
-    <AssemblyName>ConsoleApplication1</AssemblyName>
+    <RootNamespace>CreatingTriangleOutofInputSides</RootNamespace>
+    <AssemblyName>CreatingTriangleOutofInputSides</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
