--- a/FindingTheGreaterOutofThreeNumbers/FindingTheGreaterOutofThreeNumbers.csproj
+++ b/FindingTheGreaterOutofThreeNumbers/FindingTheGreaterOutofThreeNumbers.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4F946EDC-B904-4494-8351-B051CF4EEDBA}</ProjectGuid>
+    <ProjectGuid>{0D283C04-BA44-4A45-A593-74AC83F2E063}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ConsoleApplication1</RootNamespace>
-    <AssemblyName>ConsoleApplication1</AssemblyName>
+    <RootNamespace>FindingTheGreaterOutofThreeNumbers</RootNamespace>
+    <AssemblyName>FindingTheGreaterOutofThreeNumbers</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
