--- a/FindingTheGreaterOutofTwoNumbers/FindingTheGreaterOutofTwoNumbers.csproj
+++ b/FindingTheGreaterOutofTwoNumbers/FindingTheGreaterOutofTwoNumbers.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4F946EDC-B904-4494-8351-B051CF4EEDBA}</ProjectGuid>
+    <ProjectGuid>{8BDFE17F-9DFE-4BF7-A9CF-4DCFD9521217}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ConsoleApplication1</RootNamespace>
-    <AssemblyName>ConsoleApplication1</AssemblyName>
+    <RootNamespace>FindingTheGreaterOutofTwoNumbers</RootNamespace>
+    <AssemblyName>FindingTheGreaterOutofTwoNumbers</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
