--- a/WritingNumber(0-9)AndWriteItInEnglish/WritingNumber(0-9)AndWriteItInEnglish.csproj
+++ b/WritingNumber(0-9)AndWriteItInEnglish/WritingNumber(0-9)AndWriteItInEnglish.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4F946EDC-B904-4494-8351-B051CF4EEDBA}</ProjectGuid>
+    <ProjectGuid>{7AAD51AC-A95A-4B4E-8BE5-24AD825F1992}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ConsoleApplication1</RootNamespace>
-    <AssemblyName>ConsoleApplication1</AssemblyName>
+    <RootNamespace>WritingNumber_0_9_AndWriteItInEnglish</RootNamespace>
+    <AssemblyName>WritingNumber%280-9%29AndWriteItInEnglish</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
